k8s/resources/ingresses/apps-crafty-controller/ingress-crafty-controller.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafty-controller
  namespace: apps-crafty-controller
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "crafty-controller"
    tailscale.com/tags: "tag:k8s,tag:server-games"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Crafty Controller"
    gethomepage.dev/group: "Games"
    gethomepage.dev/description: "Minecraft server manager"
    gethomepage.dev/icon: "crafty"
    gethomepage.dev/url: "https://crafty-controller.rohu-shark.ts.net"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - crafty-controller.rohu-shark.ts.net
  rules:
    - host: crafty-controller.rohu-shark.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crafty-controller
                port:
                  number: 443
